adk-agent-with-sidecar/deployment.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: adk-agent-sa
  namespace: agent-spiffe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adk-agent
  namespace: agent-spiffe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adk-agent
  template:
    metadata:
      labels:
        app: adk-agent
    spec:
      serviceAccountName: adk-agent-sa
      containers:
        - name: adk-agent
          imagePullPolicy: Always
          image: docker.io/hmeng/agent:v25
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "128Mi"
            requests:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "128Mi"
          ports:
            - containerPort: 8080
              name: adk-agent
          env:
            - name: PORT
              value: "8080"
            - name: ENVOY_SERVICE
              value: "0.0.0.0:10001"
            - name: GOOGLE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: google-secret
                  key: google-api-key
        - name: envoy
          image: envoyproxy/envoy:v1.36-latest
          imagePullPolicy: Always
          command: ["/usr/local/bin/envoy"]
          args: ["-c", "/etc/envoy/envoy.yaml", "-l", "trace", "--log-path", "/dev/stderr"]
          ports:
          - name: envoy
            containerPort: 10001
          volumeMounts:
          - name: envoy-config-volume
            mountPath: /etc/envoy/envoy.yaml
            subPath: agent_sidecar_spiffe.yaml
          - mountPath: "/var/run/secrets/spiffe.io"
            name: spiffe
            # Standard location for many Linux distros to look for CA certs
          - name: cert-bundle
            mountPath: /etc/ssl/certs/trust-bundle.pem
            subPath: trust-bundle.pem
            readOnly: true
          - name: spiffe-identity-config
            mountPath: /etc/envoy/sds/spiffe_identity.yaml
            subPath: spiffe_identity.yaml
            readOnly: true
          - name: spiffe-trust-config
            mountPath: /etc/envoy/sds/spiffe_trust.yaml
            subPath: spiffe_trust.yaml
            readOnly: true
      volumes:
      - name: envoy-config-volume
        configMap:
          name: envoy-config
      - name: spiffe
        csi:
          driver: spiffe.csi.cert-manager.io
          readOnly: true
      - name: cert-bundle
        configMap:
          name: example-bundle  # Must match the Bundle's metadata.name
      - name: spiffe-identity-config
        configMap:
          name: spiffe-identity-config
      - name: spiffe-trust-config
        configMap:
          name: spiffe-trust-config
---
apiVersion: v1
kind: Service
metadata:
  name: adk-agent-svc
  namespace: agent-spiffe
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: adk-agent
    - port: 10001
      targetPort: 10001
      name: envoy
  selector:
    app: adk-agent
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: cert-manager-requester
  namespace: agent-spiffe
rules:
- apiGroups: ["cert-manager.io"]
  resources: ["certificaterequests"]
  verbs: ["create", "get", "list", "watch"] # Ensure these are all present
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: sa1-cert-manager-requester
  namespace: agent-spiffe
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: cert-manager-requester
subjects:
- kind: ServiceAccount
  name: adk-agent-sa
  namespace: agent-spiffe
